crates/quarto-core/tests/integration/snapshots/integration__listing_pipeline__snapshot_builtin_default_with_categories_default_mode.snap
---
source: crates/quarto-core/tests/integration/listing_pipeline.rs
expression: l5_owned_slice(host)
---
=== chip blocks ===
<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('cnVzdA=='); return false;">rust</div><div class="listing-category" onclick="window.quartoListingCategory('ZGVzaWdu'); return false;">design</div></div>

<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('cnVzdA=='); return false;">rust</div></div>

<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('ZWxt'); return false;">elm</div></div>

=== sidebar ===
<h5 class="quarto-listing-category-title">Categories</h5>
<div class="quarto-listing-category category-default">
<div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div>
<div class="category" data-category="ZGVzaWdu">design <span class="quarto-category-count">(1)</span></div>
<div class="category" data-category="ZWxt">elm <span class="quarto-category-count">(1)</span></div>
<div class="category" data-category="cnVzdA==">rust <span class="quarto-category-count">(2)</span></div>
</div>
