crates/quarto-core/tests/integration/snapshots/integration__listing_pipeline__snapshot_builtin_default_with_categories_unnumbered_mode.snap
---
source: crates/quarto-core/tests/integration/listing_pipeline.rs
expression: l5_owned_slice(host)
---
=== chip blocks ===
<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('cnVzdA=='); return false;">rust</div><div class="listing-category" onclick="window.quartoListingCategory('ZGVzaWdu'); return false;">design</div></div>

<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('cnVzdA=='); return false;">rust</div></div>

<div class="listing-categories"><div class="listing-category" onclick="window.quartoListingCategory('ZWxt'); return false;">elm</div></div>

=== sidebar ===
<h5 class="quarto-listing-category-title">Categories</h5>
<div class="quarto-listing-category category-unnumbered">
<div class="category" data-category="ZGVzaWdu">design</div>
<div class="category" data-category="ZWxt">elm</div>
<div class="category" data-category="cnVzdA==">rust</div>
</div>
